Fixed z-index conflict between header and cards

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -22,6 +22,7 @@ header {
 	padding: 1%;
 	position: fixed;
 	width: 100%;
+	z-index: 1;
 }
 nav {
 	float: right;
